2010-14-09  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* correlation.c: Correlation completed, runtime substitution of macros
	+ANY_ADDR+ and +ANY_PORT+ for runtime matching, runtime expansion of IP
	netmasks for matching
	* regex.c: Now supporting preg_match with matches and/or n_matches set to
	NULL

2010-11-09  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* correlation.c: Most of the correlation thread is ready
	* regex.c: Added method 'str_replace' and 'str_replace_all'

2010-09-09  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* Makefile.am: Complete support for make dist

2010-05-09  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* all: Using autotools now

2010-04-04  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* mysql.c: This file now only contains the functions for managing MySQL
	connections in the database wrapper
	* db.c: Renamed from 'mysql.c' to 'db.c', now it should be abstract
	enough for allowing the support for any database alerts without any lines
	of code should be changed
	* db.c: Fixed a stupid malloc() mistake that randomly brought the module
	to crash
	* db.h: New file, including macros and typedefs for allowing the database
	operations wrapping

2010-16-08  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* cluster.c: Finished clustering algorithm and clustering log management

2010-26-07  Fabio "BlackLight" Manganiello <blacklight@autistici.org>
	* all: First version
