@@ -1,0 +1,4 @@
+Author : Fabio "BlackLight" Manganiello
+Email  : <blacklight@autistici.org>
+Website: http://0x00.ath.cx
+
